--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "cross-env NODE_ENV=development webpack --mode development",
     "start": "cross-env NODE_ENV=development webpack serve --mode development",
     "lint": "eslint . --fix",
-    "prepare": "husky intall && husky install"
+    "prepare": "husky install"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
